WIP find variants overlapping gene
